@@ -1,6 +1,7 @@
 package com.idforideas.wikideas.service.impl;
 
 import com.idforideas.wikideas.dto.ThemeDTO;
+import com.idforideas.wikideas.exception.WikiException;
 import com.idforideas.wikideas.model.ThemeEntity;
 import com.idforideas.wikideas.repository.ThemeRepository;
 import com.idforideas.wikideas.service.ThemeService;
@@ -9,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,17 +24,17 @@ public class ThemeServiceImpl implements ThemeService {
         List<ThemeEntity> themes = themeRepository.findAll();
         return themes.stream()
                 .map(ThemeDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public ThemeDTO getThemeById(Long id) {
+    public List<ThemeDTO> getThemeById(Long id) {
         Optional<ThemeEntity> themeEntity = themeRepository.findById(id);
-        ThemeDTO themeDTO = ThemeDTO.builder()
-                .idTheme(themeEntity.get().getIdTheme())
-                .theme(themeEntity.get().getTheme())
-                .description(themeEntity.get().getDescription())
-                .build();
-        return themeDTO;
+        if (!themeEntity.isPresent()){
+            throw new WikiException("id theme does not  exist");
+        }
+        return themeEntity.stream()
+                .map(ThemeDTO::new)
+                .toList();
     }
 }
